2001-06-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2:
	improve the WindowList double press example to work with all focus
	policies

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.3.34

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (flush_property_notify):
	accidentally flushed PropertyNotify events for all windows, not just the
	given window

	* fvwm/icons.c (Iconify):
	sticky icons on desks other than 0 are mapped during a restart

	* fvwm/misc.c (UngrabEm):
	fixed ungrabbing BUSY cursor when a menu is still open

	* fvwm/events.c (HandleMapRequestKeepRaised):
	don't grab the server when 'mapping' windows that start iconic
	fixes FvwmIconMan not noticing iconic state of windows starting iconic

2001-06-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_function):
	fixed memory leak

	* fvwm/decorations.c (GetMwmHints):
	fixed memory leak

	* fvwm/session.c (SaveWindowStates):
	make sure the string list is properly freed

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/Event.c (GetSubwindowFromEvent):
	new file and function

	* fvwm/functions.c (execute_function):
	fixed UMR

	* fvwm/session.c (MatchWinToSM):
	fixed a memory leak when using session management

	* fvwm/session.c (LoadWindowStates):
	(duplicate):
	* fvwm/builtins.c (CMD_StrokeFunc):
	use saferealloc instead of realloc
	use safemalloc instead of malloc

2001-06-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_icon_font):
	check if icon_font == default font before deleting the icon_font,
	not if title_font == default font

2001-06-03  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/style.c (CMD_Style):
	accept style option Layer without argument

2001-06-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (map_window):
	prevent that dying windows are mapped again during a desk change

2001-06-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):