@@ -1,3 +1,10 @@
+2001-06-23  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm2.1: Make the multiple Iconboxes rule a little clearer.
+
+	* fvwm/fvwm.c (InitVariables): Add the vendor string for Reflection X
+	to automatically set RaiseHackNeeded.
+
 2001-06-23  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/fvwm2:
